# PLRS-IMU

./: .clang-format  .envrc  .gitignore  CONTRIBUTING.md  Makefile  README.md  flake.nix  platformio.ini  tuning.toml
.claude/: settings.json
.claude/hooks/: big-change-review-nudge.sh
.github/workflows/: ci.yml
docs/: attitude.md  audit.md  ekf.md  gnss.md  imu_wiring.md  magnetometer.md  rudder_link.md  tuning.md
hooks/: pre-push
lib/common/: common.h
lib/fusion/: attitude.h  ekf_filter.h  fusion.h  gnss_bridge.h
lib/geometry/: geometry.h
lib/mti_imu/: mti_transport.h  xbus_protocol.h
lib/rudder_link/: rudder_protocol.h  rudder_transport.h
lib/septentrio_gnss/: command.h  nmea_protocol.h  sbf_blocks.h  sbf_protocol.h  septentrio_transport.h  wire_parser.h
scripts/: gen_tuning.py  setup-compile-db.sh
sim/: .gitignore  CMakeLists.txt  pyproject.toml
sim/examples/: constant_turn.py  drift_sweep.py  sinusoidal.py  static.py  step_turns.py
sim/plrs_sim/: __init__.py  __main__.py  _native.pyi  angles.py  attitude.py  boat3d.py  deadreckon.py  ekf.py  export.py  live.py  magcal.py  monitor.py  noise.py  plot.py  replay.py  runner.py  source.py  telemetry.py  truth.py  tuning.py  types.py  views.py
sim/src/: ekf_bind.cpp
sim/tests/: test_angles.py  test_attitude.py  test_attitude_drift.py  test_boat3d.py  test_cli.py  test_deadreckon.py  test_ekf_parity.py  test_export.py  test_heading_drift.py  test_live.py  test_mag_noise.py  test_magcal.py  test_noise.py  test_outage_hold.py  test_plot.py  test_replay.py  test_runner.py  test_source.py  test_truth.py  test_tuning.py  test_tuning_codegen.py  test_wrapper.py
src/: fusion_task.cpp  fusion_task.h  gnss_task.cpp  gnss_task.h  hardware_config.h  imu_task.cpp  imu_task.h  main.cpp  rudder_task.cpp  rudder_task.h  stack_check.h
test/test_fusion/: test_attitude.cpp  test_gnss_bridge.cpp  test_main.cpp
test/test_loopback/: test_main.cpp
test/test_rudder_link/: test_main.cpp
test/test_septentrio/: test_helpers.h  test_main.cpp
test/test_xbus/: test_helpers.h  test_main.cpp
