[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.2"]
build-backend = "scikit_build_core.build"

[project]
name = "plrs-sim"
version = "0.1.0"
description = "Python simulation harness for the Polaris IMU EKF"
requires-python = ">=3.11"
dependencies = ["numpy>=2"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "matplotlib>=3.9",
    "pyqt6>=6.6",
    "matplotlib-backend-kitty>=2.1",
    # Build backend, installed into the venv so the extension builds without
    # isolation (see [tool.uv] below) and editable.rebuild can re-invoke it.
    "scikit-build-core>=0.10",
    "nanobind>=2.2",
]

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["plrs_sim"]
# Rebuild the native extension on import whenever the C++ sources change, so an
# editable install never imports a stale binding (the scikit-build-core/uv
# editable hardlink quirk). Keeps `uv run pytest` honest with no manual copy.
editable.rebuild = true
editable.verbose = false

[tool.uv]
# Use the Python provided by the nix devshell, not a uv-downloaded binary.
# uv's prebuilt CPythons link against the host's libstdc++, which is not
# on the nix shell's library path and breaks numpy import inside CI.
python-preference = "only-system"
python-downloads = "never"
# Build the extension against the project venv, not an ephemeral isolated one.
# With isolation, uv bakes a throwaway temp-venv python path into the CMake
# cache and deletes it, so any later rebuild (editable.rebuild) fails to find
# Python. Building in-venv keeps the cached interpreter path valid.
no-build-isolation-package = ["plrs-sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [".venv", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
